--- a/helloworld/src/index.css
+++ b/helloworld/src/index.css
@@ -13,9 +13,13 @@ code {
 }
 
 .WelcomeBoard {
-  background-color: #1e81b0;
+  background-color: #282c34;
   float: left;
   padding: 2em;
   margin: 1em;
   border-radius: 15px;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  -webkit-font-smoothing: antialiased;
+  font-size: calc(10px + 1vmin);
+  color: #292929;
 }
