--- a/navstyles.css
+++ b/navstyles.css
@@ -1,23 +1,33 @@
+:root {
+    font-size: 16px;
+}
+
 body {
     margin: 0px;
 }
+
 header {
     background-color: #154c79;
 }
+
 header h1 {
     color: white;
 }
+
 p {
     background-color: lightgray;
     color: darkgreen;
 }
+
 header {
     padding: 35px;
 }
+
 .navbar {
     overflow: hidden;
     background-color: #1e81b0;
 }
+
 .navbar a {
     float: left;
     display: block;
@@ -27,6 +37,7 @@ header {
     text-decoration: none;
     font-size: 18px;
 }
+
 .github-container {
     float: right;
     margin-right: 50px;
@@ -48,4 +59,33 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.card-container {
+    display: flex;
+    min-height: 30vh;
+    background-color: #379683;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.project-card {
+    border-radius: 2rem;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    background-color: #8EE4AF;
+    min-width: 300px;
+    max-width: 30vw;
+}
+
+.card-title {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.card-description {
+    padding: 0.5rem 1rem 0.5rem 1rem;
+
 }
