--- a/navstyles.css
+++ b/navstyles.css
@@ -2,6 +2,10 @@
     font-size: 16px;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0px;
 }
@@ -88,4 +92,45 @@ footer {
 .card-description {
     padding: 0.5rem 1rem 0.5rem 1rem;
 
+}
+
+.contact-container {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    background-color: #f2f2f2;
+    padding: 10px;
+}
+
+.contact-name {
+    padding: 0 20px 0 20px;
+}
+
+.contact-email {
+    padding: 0 20px 0 20px;
+}
+
+.contact-message {
+    padding: 0 20px 0 20px;
+}
+
+.contact-message input {
+
+}
+
+input[type=text], input[type=email] {
+    width: 100%;
+}
+
+input[type=submit] {
+    margin: 20px 20px 20px 20px;
+    background-color: #04AA6D;
+    border: none;
+    border-radius: 5px;
+    color: white;
+}
+
+input[type=submit]:hover {
+    background-color: #05c780;
+;
 }
