--- a/navstyles.css
+++ b/navstyles.css
@@ -21,6 +21,8 @@ header h1 {
 p {
     background-color: lightgray;
     color: darkgreen;
+    border-radius: 5px;
+    padding: 10px;
 }
 
 header {
@@ -132,5 +134,11 @@ input[type=submit] {
 
 input[type=submit]:hover {
     background-color: #05c780;
-;
+}
+
+.about-intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
 }
