--- a/helloworld/src/index.css
+++ b/helloworld/src/index.css
@@ -1,25 +1,27 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+        "Droid Sans", "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 .WelcomeBoard {
-  background-color: #282c34;
-  float: left;
-  padding: 2em;
-  margin: 1em;
-  border-radius: 15px;
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-  -webkit-font-smoothing: antialiased;
-  font-size: calc(10px + 1vmin);
-  color: #292929;
+    background-color: #282c34;
+    float: left;
+    padding: 2em;
+    margin: 1em;
+    border-radius: 15px;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+    -webkit-font-smoothing: antialiased;
+    font-size: calc(10px + 1vmin);
+    color: #292929;
+}
+
+html {
+    scroll-behavior: smooth;
 }
